# tp_ai

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
src/: image_processor.py
