[tool.poetry]
name = "tp-ai"
version = "0.1.0"
description = ""
authors = ["Louis Bailleau <louis13.bailleau@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "~3.11"
pillow = "^11.0.0"

[tool.poetry.dev-dependencies]
types-pillow = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
main = "main:main"
